# Portable_Notification_Reader

./: .gitignore  Cargo.toml  LICENSE  PortableNotificationReader.manifest  README.html  README.md  build.rs  resources.rc
.github/workflows/: rust.yml
examples/: net_check.rs
scripts/: self_sign.ps1
src/: app.rs  audio_duck.rs  config.rs  drm.rs  edge_tts.rs  filter.rs  lib.rs  locale.rs  logging.rs  main.rs  mic.rs  notifications.rs  speech.rs  startup.rs  text_shaping.rs  voices.rs  worker.rs
