[package]
name = "portable_notification_reader"
version = "1.0.0"
edition = "2021"
description = "Portable Windows 11 notification reader that speaks notifications aloud using online neural (Edge) and offline SAPI voices."
license = "MIT"
repository = "https://github.com/simorf3/Portable_Notification_Reader"

[[bin]]
name = "PortableNotificationReader"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# ---- Cross-platform dependencies (build & partial-check on Linux too) ----
[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
futures-util = "0.3.32"
hex = "0.4.3"
log = "0.4.33"
once_cell = "1.21.4"
quick-xml = "0.41.0"
regex = "1.13.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time", "io-util", "sync"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
ureq = { version = "3.3.0", features = ["rustls"] }
uuid = { version = "1.23.5", features = ["v4"] }

# ---- Windows-only dependencies (tray UI, offline SAPI TTS, Win32 calls) ----
[target.'cfg(windows)'.dependencies]
nwg = { package = "native-windows-gui", version = "1.0.13" }
native-windows-derive = "1.0.5"
tts = "0.26.3"
rodio = "0.20"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Globalization",
    "Win32_System_SystemServices",
]
